# edge-sample

EdgeSolution/: .gitignore  deployment.debug.template.json  deployment.template.json
EdgeSolution/host/samplecsdk/: CMakeLists.txt  sample.c
EdgeSolution/modules/CModule/: CMakeLists.txt  main.c  module.json  parson.c  parson.h
EdgeSolution/modules/CModulePerf/: CMakeLists.txt  Dockerfile.arm32v7  Dockerfile.arm64v8  main.c  module.json
EdgeSolution/modules/SampleContainer/: Dockerfile.amd64  Dockerfile.amd64.debug  Dockerfile.arm32v7  Dockerfile.arm32v7.debug  Dockerfile.arm64v8  Dockerfile.windows-amd64  Program.cs  module.json
EdgeSolution/modules/SampleModule/: Program.cs  module.json
